refactor: drop pet ability DSL, abilities implement PetAbility directly