@@ -4,41 +4,43 @@ import net.swofty.commons.skyblock.item.ItemType;
 import net.swofty.commons.skyblock.item.Rarity;
 import net.swofty.type.skyblockgeneric.item.SkyBlockItem;
 import net.swofty.type.skyblockgeneric.item.handlers.pet.abstr.PetAbility;
-import net.swofty.type.skyblockgeneric.item.handlers.pet.dsl.PetDsl;
-import net.swofty.type.skyblockgeneric.item.handlers.pet.dsl.PetEvent;
+import net.swofty.type.skyblockgeneric.item.handlers.pet.abstr.PetEvent;
 import net.swofty.type.skyblockgeneric.user.SkyBlockPlayer;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static net.swofty.commons.StringUtility.decimalify;
 
-public final class HoneyHarvesterAbility {
+public final class HoneyHarvesterAbility implements PetAbility {
     private static final double CHANCE_PER_LEVEL = 0.0002;
 
-    private HoneyHarvesterAbility() {
+    @Override
+    public String getName() {
+        return "Honey Harvester";
     }
 
-    public static PetAbility create() {
-        return PetDsl.ability("Honey Harvester")
-                .description(HoneyHarvesterAbility::descriptionFor)
-                .on(PetEvent.CropHarvested.class, HoneyHarvesterAbility::onCropHarvested)
-                .unimplemented("no game hook for CropHarvested yet")
-                .build();
-    }
-
-    private static List<String> descriptionFor(SkyBlockItem instance) {
+    @Override
+    public List<String> getDescription(SkyBlockItem instance) {
         Rarity rarity = instance.getAttributeHandler().getRarity();
         int level = instance.getAttributeHandler().getPetData().getAsLevel(rarity);
         double chance = CHANCE_PER_LEVEL * level;
 
-        return Arrays.asList(
+        return List.of(
                 "§7You have a §a" + decimalify(chance, 3) + "% §7chance to find a",
-                "§aHoney Jar §7when farming crops."
+                "§aHoney Jar §7when farming crops.",
+                "",
+                "§c⚠ §lNOT IMPLEMENTED§r§c — no game hook for CropHarvested yet"
         );
     }
 
-    private static void onCropHarvested(PetEvent.CropHarvested event) {
+    @Override
+    public void onEvent(PetEvent event) {
+        if (event instanceof PetEvent.CropHarvested crop) {
+            onCropHarvested(crop);
+        }
+    }
+
+    private void onCropHarvested(PetEvent.CropHarvested event) {
         SkyBlockPlayer player = event.player();
         Rarity rarity = event.pet().getAttributeHandler().getRarity();
         int level = event.pet().getAttributeHandler().getPetData().getAsLevel(rarity);
